Bot Engine Implementation

--- a/authenticator/templates/authenticator/pages/dashboard.html
+++ b/authenticator/templates/authenticator/pages/dashboard.html
@@ -89,12 +89,12 @@
 
                     </div>
                     <div class="status-tab">
-                        <h3>Time Running</h3>
-                        <h2>48hrs</h2>
+                        <h3>Successful Logins</h3>
+                        <h2>{{ bot.successful_logins }} times</h2>
                     </div>
                     <div class="status-tab">
                         <h3>Successful Bookings</h3>
-                        <h2>156</h2>
+                        <h2>{{ bot.successful_bookings }}</h2>
                     </div>
                 </div>
 
