--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -113,7 +113,7 @@ img {
 
 .main-item {
     /* border: 1px solid red; */
-    /* height: 100%; */
+    height: 100vh;
     margin-block: 24px;
     background-color: var(--bgcolor);
 }
@@ -196,7 +196,7 @@ img {
 
     /* Main item */
     .main-item {
-        width: 100%;
+
         margin: 0;
     }
 
