--- a/static/styles/auth.css
+++ b/static/styles/auth.css
@@ -41,6 +41,7 @@ input{
     box-sizing: border-box;
     border-radius: var(--rad);
     border: none;
+    background-color: var(--bgcolor);
 }
 
 button {
