--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -83,10 +83,13 @@ img {
 }
 
 
+
+
 .dashboard-tab-container {
     /* border: 1px solid red; */
-    padding-left: 16px;
-
+    /* padding-left: 16px; */
+    margin-block: 24px;
+    
 }
 
 
@@ -94,12 +97,19 @@ img {
     display: flex;
     align-items: center;
     cursor: pointer;
-    padding-block: 24px;
+    padding: 12px;
+    margin-block: 12px;
+    border-radius: var(--rad);
+    background-color: none;
 }
 
 .icn-box {
     width: 37px;
     height: 37px;
+}
+
+.small {
+    width: 24px;
 }
 
 
@@ -113,7 +123,7 @@ img {
 
 .main-item {
     /* border: 1px solid red; */
-
+    /* height: 100%; */
     margin-block: 24px;
     background-color: var(--bgcolor);
 }
@@ -180,7 +190,7 @@ img {
 
     .sidebar-item {
         width: 30%;
-        height: 100%;
+        height: 100vh;
         /* background-color: var(--darktheme);
         color: white;
         padding-inline: 24px;
@@ -196,7 +206,7 @@ img {
 
     /* Main item */
     .main-item {
-
+        width: 100%;
         margin: 0;
     }
 
@@ -208,4 +218,10 @@ img {
         width: 31.5%;
     }
 
+}
+
+/* Tab Mechanism */
+.tabcontent {
+    display: none;
+    /* color: #fff7ff1f; */
 }
