--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -15,6 +15,11 @@ img {
     height: 100%;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
+
 .main-container {
     height: 100%;
     /* border: 1px solid red; */
